JSW Devsb/src/objects/User_Targets__c.object
<CustomObject>
    <fields>
        <fullName>Days_In_Month__c</fullName>
        <formula>CASE( Month__c , &quot;January&quot;, 31, &quot;February&quot;, 28,&quot;March&quot;,31,&quot;April&quot;,30,&quot;May&quot;,31,&quot;June&quot;,30,&quot;July&quot;,31,&quot;August&quot;,31,&quot;September&quot;,30,&quot;October&quot;,31,&quot;November&quot;,30,31)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days In Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <label>Employee ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jurisdiction__c</fullName>
        <formula>Owner:User.Jurisdiction__c</formula>
        <label>Jurisdiction</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MTD_Target__c</fullName>
        <formula>(No_of_Days_MTD__c /  No_of_Days_in_a_Month__c ) *  Target__c</formula>
        <label>MTD Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manager_Role__c</fullName>
        <formula>IF( Owner:User.Profile.Name  = &quot;JSW SO&quot;, Owner:User.Manager.UserRole.Name,  Owner:User.UserRole.Name )</formula>
        <label>Manager Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <formula>IF( Owner:User.Profile.Name  = &quot;JSW SO&quot;, Owner:User.Manager.FirstName   &amp;   Owner:User.Manager.LastName,  Owner:User.FirstName  &amp;  Owner:User.LastName )</formula>
        <label>Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSR_NT_Actuals__c</fullName>
        <label>NSR NT Actuals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NSR_Trade_Actuals__c</fullName>
        <label>NSR Trade Actuals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Days_MTD__c</fullName>
        <formula>IF(MONTH(TODAY())=MONTH(Target_Start_Date__c),DAY(TODAY())-1,No_of_Days_in_a_Month__c)</formula>
        <label>No of Days MTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Days_in_a_Month__c</fullName>
        <formula>IF(MOD(VALUE(Year__c),4) = 0, CASE( Month__c , &quot;January&quot;, 31, &quot;February&quot;, 29,&quot;March&quot;,31,&quot;April&quot;,30,&quot;May&quot;,31,&quot;June&quot;,30,&quot;July&quot;,31,&quot;August&quot;,31,&quot;September&quot;,30,&quot;October&quot;,31,&quot;November&quot;,30,31), CASE( Month__c , &quot;January&quot;, 31, &quot;February&quot;, 28,&quot;March&quot;,31,&quot;April&quot;,30,&quot;May&quot;,31,&quot;June&quot;,30,&quot;July&quot;,31,&quot;August&quot;,31,&quot;September&quot;,30,&quot;October&quot;,31,&quot;November&quot;,30,31))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No of Days in a Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_New_Dealers_in_this_Month__c</fullName>
        <label>No of New Dealers in this Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>Owner:User.State</formula>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Start_Date__c</fullName>
        <formula>DATE( VALUE( Year__c ) ,  
CASE( Month__c , 
&quot;January&quot;, 1, 
&quot;February&quot;, 2,
&quot;March&quot;, 3,
&quot;April&quot;, 4,
&quot;May&quot;, 5,
&quot;June&quot;, 6,
&quot;July&quot;, 7,
&quot;August&quot;, 8,
&quot;September&quot;, 9,
&quot;October&quot;, 10,
&quot;November&quot;, 11,
12)  ,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <label>Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trade_Percentage__c</fullName>
        <formula>(  User_Trade_Actuals__c  /  User_Actuals__c  )</formula>
        <label>Trade Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>UT_Code__c</fullName>
        <formula>CASESAFEID( OwnerId ) +&apos;:&apos;+ Month__c +&apos;:&apos;+ Year__c +&apos;:&apos;+ Product__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UT Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Actuals__c</fullName>
        <formula>( User_Trade_Actuals__c  +  User_Non_Trade_Actuals__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Actuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Non_Trade_Actuals__c</fullName>
        <label>User Non-Trade Actuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Pro_Rata_Acheivement__c</fullName>
        <formula>User_Actuals__c  /  MTD_Target__c</formula>
        <label>User Pro-Rata Acheivement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Pro_Rata_Asking_Rate__c</fullName>
        <formula>( Target__c  -  User_Actuals__c ) / (   No_of_Days_in_a_Month__c - No_of_Days_MTD__c )</formula>
        <label>User Pro-Rata Asking Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Trade_Actuals__c</fullName>
        <label>User Trade Actuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_Location__c</fullName>
        <formula>Owner:User.Work_Location__c</formula>
        <label>Work Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X15_Days_Actuals__c</fullName>
        <label>15 Days Actuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>User Targets</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>No_of_Days_in_a_Month__c</columns>
        <columns>Target__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>April</fullName>
        <columns>NAME</columns>
        <columns>No_of_Days_in_a_Month__c</columns>
        <columns>Target__c</columns>
        <columns>User_Actuals__c</columns>
        <columns>Target_Start_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Month__c</field>
            <operation>equals</operation>
            <value>April</value>
        </filters>
        <label>April</label>
    </listViews>
    <listViews>
        <fullName>March</fullName>
        <columns>NAME</columns>
        <columns>No_of_Days_in_a_Month__c</columns>
        <columns>Target__c</columns>
        <columns>User_Actuals__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Month__c</field>
            <operation>equals</operation>
            <value>March</value>
        </filters>
        <label>March</label>
    </listViews>
    <nameField>
        <displayFormat>UT-{000000}</displayFormat>
        <label>User Targets  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Targets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>